<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.bellogate.voiceoffreedom.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
    </fragment>

    <fragment
        android:id="@+id/nav_give"
        android:name="com.bellogate.voiceoffreedom.ui.give.GiveFragment"
        android:label="@string/give"
        tools:layout="@layout/give_fragment" >
        <action
            android:id="@+id/action_nav_give_to_processCardFragment"
            app:destination="@id/processCardFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />
    </fragment>
    <fragment
        android:id="@+id/processCardFragment"
        android:name="com.bellogate.voiceoffreedom.ui.give.ProcessCardFragment"
        android:label="@string/verify"
        tools:layout="@layout/process_card_fragment" />

    <fragment
        android:id="@+id/nav_devotional"
        android:name="com.bellogate.voiceoffreedom.ui.devotional.DevotionalFragment"
        android:label="@string/devotional"
        tools:layout="@layout/devotional_fragment" >
        <action
            android:id="@+id/action_nav_devotional_to_fullScreenFragment"
            app:destination="@id/fullScreenFragment"
            app:exitAnim="@anim/fui_slide_out_left"
            app:launchSingleTop="false"
            app:popEnterAnim="@android:anim/slide_in_left" />
        <action
            android:id="@+id/action_nav_devotional_to_manageDevotionalsFragment"
            app:destination="@id/manageDevotionalsFragment"
            app:exitAnim="@anim/fui_slide_out_left"
            app:popEnterAnim="@android:anim/slide_in_left" />
        <action
            android:id="@+id/action_nav_devotional_to_addDevotionalFragment"
            app:destination="@id/addDevotionalFragment"
            app:exitAnim="@anim/fui_slide_out_left"
            app:popEnterAnim="@android:anim/slide_in_left" />
    </fragment>
    <fragment
        android:id="@+id/fullScreenFragment"
        android:name="com.bellogate.voiceoffreedom.ui.devotional.FullScreenFragment"
        android:label="Enlarge"
        tools:layout="@layout/fragment_full_screen" />
    <fragment
        android:id="@+id/manageDevotionalsFragment"
        android:name="com.bellogate.voiceoffreedom.ui.devotional.manage.ManageDevotionalsFragment"
        android:label="Manage Devotionals"
        tools:layout="@layout/manage_devotionals_fragment" />

    <fragment
        android:id="@+id/addDevotionalFragment"
        android:name="com.bellogate.voiceoffreedom.ui.devotional.add.AddDevotionalFragment"
        android:label="Add Devotional"
        tools:layout="@layout/add_devotional_fragment" />
    <fragment
        android:id="@+id/nav_media"
        android:name="com.bellogate.voiceoffreedom.ui.media.MediaFragment"
        android:label="fragment_media"
        tools:layout="@layout/fragment_media" />
    <fragment
        android:id="@+id/uploadVideoFragment"
        android:name="com.bellogate.voiceoffreedom.ui.media.UploadVideoFragment"
        android:label="fragment_upload_video"
        tools:layout="@layout/fragment_upload_video" />
    <fragment
        android:id="@+id/videoPlayerFragment"
        android:name="com.bellogate.voiceoffreedom.ui.media.VideoPlayerFragment"
        android:label="fragment_video_player"
        tools:layout="@layout/fragment_video_player" />
</navigation>